Update: Revet code back to bootstrap4 to flix alignment issue. Add Personal Info section and CSS Styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-/*Colors*/
-
+/*--------------------------------------------Colors*/
 
 .bg-color-name-title {
     background-color: #676767;
@@ -9,6 +8,10 @@
 
 .bg-color-three-reasons {
     background-color: #fff;
+}
+
+.bg-color-personal-info {
+    background-color: #f4f4f4;
 }
 
 .ui-menu-color-home {
@@ -25,26 +28,6 @@
 
 .ui-menu-color-download {
     background-color: #525252;
-}
-
-/* Special paddings/margins/text */
-
-h1,h2,h3,h4 {
-    margin: 0;
-}
-
-.uppercase {
-    text-transform: uppercase;
-}
-
-.general-sub {
-    font-family: 'Exo', sans-serif;
-    font-weight: 300;
-    color: #fafafa;
-}
-
-.inline-block {
-    display: inline-block;
 }
 
 .row-table {
@@ -64,11 +47,30 @@ h1,h2,h3,h4 {
     margin-bottom: 40px;
 }
 
-.center {
-    text-align: center;;
+/* ----------------------------------------Special paddings/margins/text */
+
+h1,
+h2,
+h3,
+h4 {
+    margin: 0;
 }
 
-/*Heading*/
+.uppercase {
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    color: #fafafa;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
+/*--------------------------------------------Heading*/
 
 header {
     margin: 0;
@@ -112,16 +114,15 @@ header {
 
 .menucontainer {
     font-size: 0;
-    border: 0;
-}
-
-#nav {
-    margin: 0;
 }
 
 #nav li {
     font-size: 14px;
     padding: 0;
+}
+
+#nav {
+    margin: 0;
 }
 
 .menuitem {
@@ -155,15 +156,14 @@ header {
     letter-spacing: 2px;
 }
 
-
-/* Hover.css */
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/* Footer */
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -215,8 +215,7 @@ footer {
     padding: 20px;
 }
 
-
-/* Three Reasons*/
+/* ----------------------------------------Three Reasons */
 
 .three-reasons-icon {
     font-size: 26px;
